fixed dropdowns being the wrong height per column

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ p {
 .container {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
 
     margin-left: 2%;
     margin-right: 2%;
@@ -65,6 +66,7 @@ p {
     /* this is internal padding, external padding is called a margin*/
     margin-right: 1%;
     margin-top: 5px;
+    height: fit-content;
 
     /* box-sizing: border-box; */
     border-style: solid;
@@ -102,12 +104,12 @@ input:checked ~ .content0 {
 /* sub-content area */
 .content {
     padding: 0 18px;
-    max-height: 100%;  
+    max-height: 100%;
     overflow: hidden;
 }
 .content0 {
     padding: 0 18px;
-    max-height: 100%;  
+    max-height: 100%;
     overflow: hidden;
 }
 .link {
